5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4189/executions/1716_2508.log
== TEST (2019-05-16 10:40:31) 
-- CODE:
n = int(input("n:"))
pi=0 
while(n>=1):
	if(n%2==1):
		pi=pi+(4/(2*n-1))
	else:
		pi=pi-(4/(2*n-1))
	n=n-1 
print(round(pi,8))
-- OUTPUT:
3.33968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:41:47) 
-- CODE:
n = int(input("n:"))
pi=3 
while(n>=1):
	if(n%2==1):
		pi=pi+(4/(2*n-1))
	else:
		pi=pi-(4/(2*n-1))
	n=n-1 
print(round(pi,8))
-- OUTPUT:
6.33968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:14:28) 
-- CODE:
n = int(input("n:"))
pi=3 
while(n>=1):
	if(n%2==1):
		pi=pi+(4/((n*2)*(n*2+1)*(n*2+2)))
	else:
		pi=pi-(4/((n*2)*(n*2+1)*(n*2+2))
	n=n-1 
print(round(pi,8))
-- ERROR:
File "XXXX", line 8
    n=n-1 
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:14:58) 
-- CODE:
n = int(input("n:"))
pi=3 
while(n>=1):
	if(n%2==1):
		pi=pi+(4/((n*2)*(n*2+1)*(n*2+2)))
	else:
		pi=pi-(4/((n*2)*(n*2+1)*(n*2+2))
	n = n - 1 
print(round(pi,8))
-- ERROR:
File "XXXX", line 8
    n = n - 1 
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:15:42) 
-- CODE:
n = int(input("n:"))
pi=3 
while(n>=1):
	if(n%2==1):
		pi=pi+(4/((n*2)*(n*2+1)*(n*2+2)))
	else:
		pi=pi-(4/((n*2)*(n*2+1)*(n*2+2))
	
	n = n - 1 
print(round(pi,8))
-- ERROR:
File "XXXX", line 9
    n = n - 1 
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:15:59) 
-- CODE:
n = int(input("n:"))
pi=3 
while(n>=1):
	if(n%2==1):
		pi=pi+(4/((n*2)*(n*2+1)*(n*2+2)))
	else:
		pi=pi-(4/((n*2)*(n*2+1)*(n*2+2))
	n =( n - 1 )
print(round(pi,8))
-- ERROR:
File "XXXX", line 8
    n =( n - 1 )
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:16:21) 
-- CODE:
n = int(input("n:"))
pi=3 
while(n>=1):
	if(n%2==1):
		pi=pi+(4/((n*2)*(n*2+1)*(n*2+2)))
	else:
		pi=pi-(4/((n*2)*(n*2+1)*(n*2+2))
	n = n-1 
print(round(pi,8))
-- ERROR:
File "XXXX", line 8
    n = n-1 
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:18:00) 
-- CODE:
n = int(input("n:"))
pi=3 
while(n>=1):
	if(n%2==1):
		pi=pi+(4/((n*2)*(n*2+1)*(n*2+2)))
	else:
		pi=pi-(4/((n*2)*(n*2+1)*(n*2+2)) 
print(round(pi,8))
-- ERROR:
File "XXXX", line 8
    print(round(pi,8))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:18:31) 
-- CODE:
n = int(input("n:"))
pi=3 
while(n>=1):
	if(n%2==1):
		pi=pi+(4/((n*2)*(n*2+1)*(n*2+2)))
	else:
		pi=pi-(4/((n*2)*(n*2+1)*(n*2+2)) 
print(round(pi,8))
-- ERROR:
File "XXXX", line 8
    print(round(pi,8))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:30:04) 
-- CODE:
n = int(input("n:"))
pi=3 
while(n>=1):
	if(n%2==1):
		pi=pi+(4/((n*2)*(n*2+1)*(n*2+2)))
	else:
		pi=pi-(4/((n*2)*(n*2+1)*(n*2+2)) 
	n=n-2
print(round(pi,8))
-- ERROR:
File "XXXX", line 8
    n=n-2
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:43:20) 
-- CODE:
n = int(input("n:"))
pi=3 
while(n>=1):
	if(n%2==1):
		pi=pi+(4/((n*2)*(n*2+1)*(n*2+2)))
	else:
		pi=pi-(4/((n*2)*(n*2+1)*(n*2+2)) 
	n=n+1
print(round(pi,8))
-- ERROR:
File "XXXX", line 8
    n=n+1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:50:02) 
-- CODE:
n = int(input("n:"))
pi=3 
while(n<=1):
	if(n%2==1):
		pi=pi+(4/((n*2)*(n*2+1)*(n*2+2)))
	else:
		pi=pi-(4/((n*2)*(n*2+1)*(n*2+2)) 
	n=n-1
print(round(pi,8))
-- ERROR:
File "XXXX", line 8
    n=n-1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:54:19) 
-- CODE:
n = int(input("n:"))
pi=3 
num=2
while(n>=1):
	if(n%2==1):
		pi=pi+(4/num*(num+1)*(num+2))
	else:
		pi=pi-(4/(num*(num+1)*(num+2)) 
	n=n-1
print(round(pi,8))
-- ERROR:
File "XXXX", line 9
    n=n-1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:54:30) 
-- CODE:
n = int(input("n:"))
pi=3 
num=2
while(n>=1):
	if(n%2==1):
		pi=pi+(4/num*(num+1)*(num+2))
	else:
		pi=pi-(4/(num*(num+1)*(num+2)) 
print(round(pi,8))
-- ERROR:
File "XXXX", line 9
    print(round(pi,8))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:54:35) 
-- CODE:
n = int(input("n:"))
pi=3 
num=2
while(n>=1):
	if(n%2==1):
		pi=pi+(4/num*(num+1)*(num+2))
	else:
		pi=pi-(4/(num*(num+1)*(num+2)) 
print(round(pi,8))
-- ERROR:
File "XXXX", line 9
    print(round(pi,8))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:02:05) 
-- CODE:
n = int(input("n:"))
pi=3 
num=2
sinal=1
contador=0
while(contador<n):
	pi=3+(sinal*(4/num*(num+1)*(num+2)))
	sinal=sinal*-1
	num=num+2
	contador=contador+1
print(round(pi,8))
-- OUTPUT:
55.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:02:36) 
-- CODE:
n = int(input("n:"))
pi=3 
num=2
sinal=1
contador=0
while(contador<n):
	pi=pi+(sinal*(4/num*(num+1)*(num+2)))
	sinal=sinal*-1
	num=num+2
	contador=contador+1
print(round(pi,8))
-- OUTPUT:
42.13333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:03:16) 
-- CODE:
n = int(input("n:"))
pi=3 
num=2
sinal=1
contador=1
while(contador<n):
	pi=pi+(sinal*(4/num*(num+1)*(num+2)))
	sinal=sinal*-1
	num=num+2
	contador=contador+1
print(round(pi,8))
-- OUTPUT:
-10.66666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:04:02) 
-- CODE:
n = int(input("n:"))
pi=3 
num=2
sinal=1
contador=1
while(contador<n):
	pi=pi+(sinal*(4/num*(num+1)*(num+2)))
	sinal=sinal*(-1)
	num=num+2
	contador=contador+1
print(round(pi,8))
-- OUTPUT:
-10.66666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:04:23) 
-- CODE:
n = int(input("n:"))
pi=3 
num=2
sinal=1
contador=0
while(contador<n):
	pi=pi+(sinal*(4/num*(num+1)*(num+2)))
	sinal=sinal*(-1)
	num=num+2
	contador=contador+1
print(round(pi,8))
-- OUTPUT:
42.13333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 12:06:23) 
-- CODE:
n = int(input("n:"))
pi=3 
num=2
sinal=1
contador=1
while(contador<n):
	pi=pi+(sinal*(4/num*(num+1)*(num+2)))
	sinal=sinal*(-1)
	num=num+2
	contador=contador+1
print(round(pi,8))
-- EXECUTION TIME:
0.161597
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
-10.66666667
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
105.8655618
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
-66.3354407
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 12:06:24) 
-- CODE:
n = int(input("n:"))
pi=3 
num=2
sinal=1
contador=1
while(contador<n):
	pi=pi+(sinal*(4/num*(num+1)*(num+2)))
	sinal=sinal*(-1)
	num=num+2
	contador=contador+1
print(round(pi,8))
-- EXECUTION TIME:
0.208779
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
-10.66666667
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
105.8655618
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
-66.3354407
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 12:06:25) 
-- CODE:
n = int(input("n:"))
pi=3 
num=2
sinal=1
contador=1
while(contador<n):
	pi=pi+(sinal*(4/num*(num+1)*(num+2)))
	sinal=sinal*(-1)
	num=num+2
	contador=contador+1
print(round(pi,8))
-- EXECUTION TIME:
0.21015
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
-10.66666667
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
105.8655618
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
-66.3354407
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 12:06:25) 
-- CODE:
n = int(input("n:"))
pi=3 
num=2
sinal=1
contador=1
while(contador<n):
	pi=pi+(sinal*(4/num*(num+1)*(num+2)))
	sinal=sinal*(-1)
	num=num+2
	contador=contador+1
print(round(pi,8))
-- EXECUTION TIME:
0.109992
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
-10.66666667
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
105.8655618
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
-66.3354407
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 12:06:25) 
-- CODE:
n = int(input("n:"))
pi=3 
num=2
sinal=1
contador=1
while(contador<n):
	pi=pi+(sinal*(4/num*(num+1)*(num+2)))
	sinal=sinal*(-1)
	num=num+2
	contador=contador+1
print(round(pi,8))
-- EXECUTION TIME:
0.0969131
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
-10.66666667
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
105.8655618
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
-66.3354407
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:06:29) 
-- CODE:
n = int(input("n:"))
pi=3 
num=2
sinal=1
contador=1
while(contador<n):
	pi=pi+(sinal*(4/num*(num+1)*(num+2)))
	sinal=sinal*(-1)
	num=num+2
	contador=contador+1
print(round(pi,8))
-- OUTPUT:
-10.66666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:06:35) 
-- CODE:
n = int(input("n:"))
pi=3 
num=2
sinal=1
contador=1
while(contador<n):
	pi=pi+(sinal*(4/num*(num+1)*(num+2)))
	sinal=sinal*(-1)
	num=num+2
	contador=contador+1
print(round(pi,8))
-- OUTPUT:
-10.66666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:06:44) 
-- CODE:
n = int(input("n:"))
pi=3 
num=2
sinal=1
contador=1
while(contador<n):
	pi=pi+(sinal*(4/num*(num+1)*(num+2)))
	sinal=sinal*(-1)
	num=num+2
	contador=contador+1
print(round(pi,8))
-- OUTPUT:
-10.66666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:07:42) 
-- CODE:
n = int(input("n:"))
pi=3 
num=2
sinal=1
contador=1
while(contador<n):
	pi=pi+(sinal*(4/(num*(num+1)*(num+2)))
	sinal=sinal*(-1)
	num=num+2
	contador=contador+1
print(round(pi,8))
-- ERROR:
File "XXXX", line 8
    sinal=sinal*(-1)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:08:19) 
-- CODE:
n = int(input("n:"))
pi=3 
num=2
sinal=1
contador=1
while(contador<n):
	pi=pi+(sinal*(4/(num*(num+1)*(num+2)))
	sinal=sinal*-1
	num=num+2
	contador=contador+1
print(round(pi,8))
-- ERROR:
File "XXXX", line 8
    sinal=sinal*-1
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:13:03) 
-- CODE:
n = int(input(n:))
sinal=1
numerador=2
cont=1
pi=3
while(cont<n):
	result=result+(sinal*(4/(numerador*(numerador+1)*(numerador+2))))
	inal=sinal*(-1)
	numerador=numerador+2
	cont=cont+1
print(round(pi,8))
-- ERROR:
File "XXXX", line 1
    n = int(input(n:))
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:13:25) 
-- CODE:
n=int(input(n:))
sinal=1
numerador=2
cont=1
pi=3
while(cont<n):
	result=result+(sinal*(4/(numerador*(numerador+1)*(numerador+2))))
	inal=sinal*(-1)
	numerador=numerador+2
	cont=cont+1
print(round(pi,8))
-- ERROR:
File "XXXX", line 1
    n=int(input(n:))
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:13:46) 
-- CODE:
n=int(input("n:"))
sinal=1
numerador=2
cont=1
pi=3
while(cont<n):
	result=result+(sinal*(4/(numerador*(numerador+1)*(numerador+2))))
	inal=sinal*(-1)
	numerador=numerador+2
	cont=cont+1
print(round(pi,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    result=result+(sinal*(4/(numerador*(numerador+1)*(numerador+2))))
NameError: name 'result' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:14:25) 
-- CODE:
n=int(input("n:"))
sinal=1
numerador=2
cont=1
pi=3
while(cont<n):
	pi=pi+(sinal*(4/(numerador*(numerador+1)*(numerador+2))))
	sinal=sinal*(-1)
	numerador=numerador+2
	cont=cont+1
print(round(pi,8))
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 12:14:33) 
-- CODE:
n=int(input("n:"))
sinal=1
numerador=2
cont=1
pi=3
while(cont<n):
	pi=pi+(sinal*(4/(numerador*(numerador+1)*(numerador+2))))
	sinal=sinal*(-1)
	numerador=numerador+2
	cont=cont+1
print(round(pi,8))
-- EXECUTION TIME:
0.222832
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14155633
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
